# Muek

./: .gitignore  Muek.sln  Muek.sln.DotSettings  README.md
Muek/: App.axaml  App.axaml.cs  Muek.csproj  Program.cs  ViewLocator.cs  app.manifest
Muek/Commands/: AudioCommand.cs  GreetCommand.cs  IRpcCommand.cs
Muek/Engine/: ByteBuffer.cs  MuekEngine.g.cs
Muek/Helpers/: SliceHelper.cs  VstHelper.cs
Muek/Models/: Clip.cs  IPlugin.cs  Track.cs  ViewHelper.cs  VstPlugin.cs
Muek/Services/: AudioService.cs  DataStateService.cs  MIDIService.cs  RingBufferSampleProvider.cs  RpcService.cs  TimeSyncService.cs  UiStateService.cs
Muek/ViewModels/: ClipViewModel.cs  MainWindowViewModel.cs  PatternSelectionViewModel.cs  PatternViewModel.cs  PluginManagerWindowViewModel.cs  TrackHeadViewModel.cs  TrackPluginStackWindowViewModel.cs  TrackViewModel.cs  ViewModelBase.cs
Muek/Views/: ClipItem.axaml  ClipItem.axaml.cs  DialogWindow.axaml  DialogWindow.axaml.cs  ErrorWindow.axaml  ErrorWindow.axaml.cs  LineDrawer.axaml  LineDrawer.axaml.cs  MagnetSettingsWindow.axaml  MagnetSettingsWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Mixer.axaml  Mixer.axaml.cs  MixerLevelMeter.axaml  MixerLevelMeter.axaml.cs  MuekColorPicker.axaml  MuekColorPicker.axaml.cs  MuekPlugin.axaml  MuekPlugin.axaml.cs  MuekValuer.axaml  MuekValuer.axaml.cs  NoteVelocity.axaml  NoteVelocity.axaml.cs  PatternPreview.axaml  PatternPreview.axaml.cs  PatternSelection.axaml  PatternSelection.axaml.cs  PianoRoll.axaml  PianoRoll.axaml.cs  PianoRollWindow.axaml  PianoRollWindow.axaml.cs  PianoScroller.axaml  PianoScroller.axaml.cs  PianoSlider.axaml  PianoSlider.axaml.cs  PluginManagerWindow.axaml  PluginManagerWindow.axaml.cs  ProcessingWindow.axaml  ProcessingWindow.axaml.cs  (+14 more)
muek_engine/: Cargo.toml  build.fish  build.ps1  build.rs
muek_engine/src/: audio.rs  byte_buffer.rs  decode.rs  greet.rs  lazy_states.rs  lib.rs  main.rs  muek_event.rs  vst_box.rs  winit_app.rs
muek_engine/src/protos/: mod.rs  tracks_proto.rs
protos/: audio.proto  greet.proto
