[package]
name = "muek_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
raw-window-handle = "0.6.1"
# rodio = "0.17.3"
vst = { version = "0.4.0", features = ["disable_deprecation_warning"] }
winit = "0.30.12"
cpal = "0.15.3"
anyhow = "1.0.82"
hound = "3.5.1"
minimp3 = "0.5.1"
rodio = "0.17.3"
once_cell = "1.21.3"
[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]


[build-dependencies]
csbindgen = "1.9.6"
