[package]
name = "muek_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
raw-window-handle = "0.6.1"
vst = { version = "0.4.0", features = ["disable_deprecation_warning"] }
winit = "0.30.12"
anyhow = "1.0.82"
hound = "3.5.1"
cpal = "0.16.0"
symphonia = { version = "0.5.4", features = ["mp3"] }
minimp3 = { git = "https://github.com/Manith-2001/minimp3-rs.git" }
once_cell = "1.21.3"
infer = "0.19.0"
bon = "3.8.1"


[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]


[build-dependencies]
csbindgen = "1.9.6"
